creditas-sf/force-app/main/default/objects/TaskDetails__c/TaskDetails__c.object-meta.xml
<CustomObject>
    <label>Detalhe da Tarefa</label>
    <nameField>
        <label>Detalhe da Tarefa</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detalhes da Tarefa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>