creditas-sf/force-app/main/default/objects/TaskDetails__c/fields/CreatedAt__c.field-meta.xml
<CustomField>
    <fullName>CreatedAt__c</fullName>
    <label>Created At</label>
    <type>DateTime</type>
</CustomField>