creditas-sf/force-app/main/default/objects/TaskDetails__c/fields/FieldKey10__c.field-meta.xml
<CustomField>
    <fullName>FieldKey10__c</fullName>
    <label>Field Key 10</label>
    <length>100</length>
    <type>Text</type>
</CustomField>