creditas-sf/force-app/main/default/objects/TaskDetails__c/fields/FieldKey11__c.field-meta.xml
<CustomField>
    <fullName>FieldKey11__c</fullName>
    <label>Field Key 11</label>
    <length>100</length>
    <type>Text</type>
</CustomField>