creditas-sf/force-app/main/default/objects/TaskDetails__c/fields/FieldKey12__c.field-meta.xml
<CustomField>
    <fullName>FieldKey12__c</fullName>
    <label>Field Key 12</label>
    <length>100</length>
    <type>Text</type>
</CustomField>