creditas-sf/force-app/main/default/objects/TaskDetails__c/fields/FieldName10__c.field-meta.xml
<CustomField>
    <fullName>FieldName10__c</fullName>
    <label>Field Name 10</label>
    <length>100</length>
    <type>Text</type>
</CustomField>