creditas-sf/force-app/main/default/objects/TaskDetails__c/fields/FieldName11__c.field-meta.xml
<CustomField>
    <fullName>FieldName11__c</fullName>
    <label>Field Name 11</label>
    <length>100</length>
    <type>Text</type>
</CustomField>