creditas-sf/force-app/main/default/objects/TaskDetails__c/fields/FieldName12__c.field-meta.xml
<CustomField>
    <fullName>FieldName12__c</fullName>
    <label>Field Name 12</label>
    <length>100</length>
    <type>Text</type>
</CustomField>