creditas-sf/force-app/main/default/objects/TaskDetails__c/fields/FieldValue10__c.field-meta.xml
<CustomField>
    <fullName>FieldValue10__c</fullName>
    <label>Field Value 10</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>