creditas-sf/force-app/main/default/objects/TaskDetails__c/fields/FieldValue11__c.field-meta.xml
<CustomField>
    <fullName>FieldValue11__c</fullName>
    <label>Field Value 11</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>