creditas-sf/force-app/main/default/objects/TaskDetails__c/fields/FieldValue12__c.field-meta.xml
<CustomField>
    <fullName>FieldValue12__c</fullName>
    <label>Field Value 12</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>