creditas-sf/force-app/main/default/objects/TaskDetails__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HOME</fullName>
                <default>true</default>
                <label>HOME</label>
            </value>
            <value>
                <fullName>AUTOFIN</fullName>
            </value>
            <value>
                <fullName>ATWORK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>