creditas-sf/force-app/main/default/objects/TaskDetails__c/fields/TaskType__c.field-meta.xml
<CustomField>
    <fullName>TaskType__c</fullName>
    <label>Task Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>