creditas-sf/force-app/main/default/objects/TaskDetails__c/fields/WorkflowKey__c.field-meta.xml
<CustomField>
    <fullName>WorkflowKey__c</fullName>
    <label>Workflow Key</label>
    <length>30</length>
    <type>Text</type>
</CustomField>